--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
@@ -6,15 +7,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
-        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        type="text/css" />
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Rosie</title>
 </head>
-<header></header>
 
 <body>
     <header>
+        <div class="row">
+            <a class="col-md-4 logo" href="index.html">Hello</a>
+            <div class="col-md-8">
+                <div class="row bg-color-name-tittle">
+                    <div class="col heading">
+                        <h1 class="name">Rosie Odenkirk</h1>
+                        <h2 class="tittle">Full Stack Developer</h2>
+                    </div>
+                </div>
+                <div clas="row">
+                    <div class="col">
+                        <ul id="nav" class="list-inline">
+                            <li class="col-6 col-sm-3 list-inline-item">
+                                <a href="#"><span>Home</span></a>
+                            <li class="col-6 col-sm-3 list-inline-item">
+                                <a href="#"><span>Home</span></a>
+                            </li>
 
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <section>
 
