finished index page, added CSS and other pages

--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
                     <div class="col">
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><span><i class="fa fa-home"
+                                <a href="index.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-home"
                                             aria-hidden="true"></i> Home</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><span><i class="fa fa-graduation-cap"
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-graduation-cap"
                                             aria-hidden="true"></i>
                                         Resume</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><span><i class="fa fa-comment-o"
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-comment-o"
                                             aria-hidden="true"></i> Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><span><i class="fa fa-download"
+                                <a href="download.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-download"
                                             aria-hidden="true"></i> Download</span></a>
                             </li>
                         </ul>
@@ -52,11 +52,19 @@
             </div>
         </div>
     </header>
-    <section>
-
+    <section class="container-fluid">
+        <div class="row row-table">
+            <div class="col-md-8 bg-color-three-reasons section column">
+                <div class="row">
+                    <div class="col">
+                        <h3 class="section-heading uppercase"> About Me</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <footer class="container-fluid">
-        <div class="row">
+        <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
                 <p class="inline-block">
