added resume.html content

--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
                         <p class="uppercase">
                             Name:
                         </p>
-                        <div class="value">
-                            <p>
-                                Rosie Odenkirk
-                            </p>
-                        </div>
                     </div>
+                    <div class="value">
+                        <p>
+                            Rosie Odenkirk
+                        </p>
+                    </div>
+                </div>
+                <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">
                             Address:
@@ -81,6 +83,8 @@
                             17 Riverdale, Catskills, NY USA
                         </p>
                     </div>
+                </div>
+                <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">
                             Phone:
@@ -91,6 +95,8 @@
                             555 251 1578
                         </p>
                     </div>
+                </div>
+                <div class="personal-info-item">
                     <div class="key">
                         <p class="uppercase">
                             Email:
