--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
                                             aria-hidden="true"></i> Contact</span></a>
                             </li>
                             <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="download.html" class="hvr-sweep-to-bottom"><span><i class="fa fa-download"
-                                            aria-hidden="true"></i> Download</span></a>
+                                <a href="assets/css/cv/sample-cv.pdf" class="hvr-sweep-to-bottom"
+                                    target="_blank"><span><i class="fa fa-download" aria-hidden="true"></i>
+                                        Download</span></a>
                             </li>
                         </ul>
                     </div>
